[package]
name = "airship"
version = "0.1.0"
authors = ["Kelly McLaughlin <kelly@kelly-mclaughlin.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
futures = "0.1.28"
hyper = "0.11.27"
mime = "0.3"
itertools = "0.8.0"
radix_trie = { git = "https://github.com/kellymclaughlin/rust_radix_trie", branch = "prefix-match" }
